@@ -57,45 +57,6 @@ $(() => {
   $(window).on('resize', _onResize);
   _onResize();
 
-  // const currentVersion = document.getElementById('package-version').innerHTML;
-
-  // warn about outdated version
-  // var packageUrl = 'https://raw.githubusercontent.com/openlayers/openlayers.github.io/build/package.json';
-  // fetch(packageUrl).then(function(response) {
-  //   return response.json();
-  // }).then(function(json) {
-  //   var latestVersion = json.version;
-  //   document.getElementById('latest-version').innerHTML = latestVersion;
-  //   var url = window.location.href;
-  //   var branchSearch = url.match(/\/([^\/]*)\/apidoc\//);
-  //   var cookieText = 'dismissed=-' + latestVersion + '-';
-  //   var dismissed = document.cookie.indexOf(cookieText) != -1;
-  //   if (!dismissed && /^v[0-9\.]*$/.test(branchSearch[1]) && currentVersion != latestVersion) {
-  //     var link = url.replace(branchSearch[0], '/latest/apidoc/');
-  //     fetch(link, { method: 'head' }).then(function(response) {
-  //       var a = document.getElementById('latest-link');
-  //       a.href = response.status == 200 ? link : '../../latest/apidoc/';
-  //     });
-  //     var latestCheck = document.getElementById('latest-check');
-  //     latestCheck.style.display = '';
-  //     document.getElementById('latest-dismiss').onclick = function() {
-  //       latestCheck.style.display = 'none';
-  //       document.cookie = cookieText;
-  //     }
-  //   }
-  // });
-
-  // create source code links to github
-  // const srcLinks = $('div.tag-source');
-  // srcLinks.each((i, el) => {
-  //   const textParts = el.innerHTML.trim().split(', ');
-  //   const link = `https://github.com/openlayers/openlayers/blob/v${currentVersion}/src/ol/${
-  //     textParts[0]}`;
-  //   el.innerHTML = `<a href="${link}">${textParts[0]}</a>, ` +
-  //     `<a href="${link}${textParts[1].replace('line ', '#L')}">${
-  //       textParts[1]}</a>`;
-  // });
-
   // Highlighting current anchor
 
   const anchors = $('.anchor');
